# kubepulse

./: CAPABILITIES.md  CONTRIBUTING.md  LOGIC_LIBRARY.md  MANIFEST.in  README.md  build.sh  iinstall-completions.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/kubecuro/: healer.py  main.py  models.py  shield.py  synapse.py
src/kubecuro/healing/: lexer.py
src/kubecuro/utils/: logger.py
tests/: test_logic.py  test_shield.py  test_summary_logic.py
tests/samples/: ghost_service_error.yaml  hpa_logic_error.yaml  security-risk.yaml  syntax_error.yaml  web-stack.yaml
