[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubecuro"
version = "1.0.0"
description = "A 3-in-1 Heartbeat Monitor for Kubernetes Manifests"
authors = [
    {name = "Nishar A Sunkesala", email = "fixmyk8s@protonmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "ruamel.yaml>=0.17.0",
    "rich>=12.0.0",
    "tabulate>=0.8.1",
]

[project.scripts]
kubecuro = "kubecuro.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
